--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 <div className="p-3 bg-white bg-opacity-10 rounded-full">
                                     <UsersIcon />
                                 </div>
-                                <h1 className="text-2xl font-bold text-white drop-shadow-lg">랜덤 조 편성기</h1>
+                                <h1 className="text-2xl font-bold text-white drop-shadow-lg">소리의 랜덤 조 편성기</h1>
                             </div>
 
                             <div className="space-y-4">
