--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
             font-family: 'Noto Sans KR', sans-serif;
             margin: 0;
             padding: 0;
-            /* 배경 그라데이션 고정 */
             background: linear-gradient(135deg, #4c51bf 0%, #6b46c1 100%);
             min-height: 100vh;
-            overflow-x: hidden; /* 가로 스크롤 방지 */
+            overflow-x: hidden;
         }
 
-        /* 배경 도형 컨테이너: 화면에 고정(fixed)시켜서 스크롤에 영향 없도록 함 */
         .background-shapes {
             position: fixed;
             top: 0;
@@ -72,7 +70,6 @@
             to { transform: translate(50px, 50px) rotate(20deg); }
         }
 
-        /* Custom Scrollbar */
         textarea::-webkit-scrollbar, .custom-scrollbar::-webkit-scrollbar {
             width: 8px;
         }
@@ -98,7 +95,6 @@
     <script type="text/babel">
         const { useState, useEffect } = React;
 
-        // Icons
         const RefreshIcon = () => <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"/><path d="M16 21h5v-5"/></svg>;
         const UsersIcon = () => <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>;
         const CopyIcon = () => <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><rect width="14" height="14" x="8" y="8" rx="2" ry="2"/><path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"/></svg>;
@@ -107,12 +103,11 @@
 
         const App = () => {
             const [names, setNames] = useState('');
-            const [groupSize, setGroupSize] = useState(4);
+            const [groupSize, setGroupSize] = useState(4); // 초기값 4
             const [groups, setGroups] = useState([]);
             const [isShuffling, setIsShuffling] = useState(false);
             const [copied, setCopied] = useState(false);
 
-            // Fisher-Yates Shuffle Algorithm
             const shuffleArray = (array) => {
                 let currentIndex = array.length, randomIndex;
                 while (currentIndex != 0) {
@@ -129,8 +124,11 @@
                     return;
                 }
 
+                // [수정됨] 실행 시에 숫자가 비어있거나 1보다 작으면 1로 처리
+                const size = parseInt(groupSize) > 0 ? parseInt(groupSize) : 1;
+
                 setIsShuffling(true);
-                setGroups([]); // Clear previous results
+                setGroups([]); 
 
                 setTimeout(() => {
                     const nameList = names.split(/[\n,]+/).map(n => n.trim()).filter(n => n !== '');
@@ -142,8 +140,9 @@
 
                     const shuffledNames = shuffleArray([...nameList]);
                     const resultGroups = [];
-                    for (let i = 0; i < shuffledNames.length; i += groupSize) {
-                        resultGroups.push(shuffledNames.slice(i, i + groupSize));
+                    // [수정됨] 여기서 state인 groupSize 대신 안전하게 변환된 size 변수 사용
+                    for (let i = 0; i < shuffledNames.length; i += size) {
+                        resultGroups.push(shuffledNames.slice(i, i + size));
                     }
 
                     setGroups(resultGroups);
@@ -180,11 +179,8 @@
 
             return (
                 <div className="min-h-screen flex items-center justify-center p-4">
-                    {/* 모바일 정렬 이슈 해결: w-full 추가 */}
                     <div className="w-full max-w-5xl flex flex-col lg:flex-row gap-6">
                         
-                        {/* Left Panel: Inputs */}
-                        {/* w-full 추가하여 모바일에서 꽉 차게 */}
                         <div className="w-full lg:flex-1 bg-indigo-950 bg-opacity-40 backdrop-filter backdrop-blur-xl border border-white border-opacity-20 rounded-3xl p-6 shadow-2xl text-white">
                             <div className="flex items-center gap-3 mb-6">
                                 <div className="p-3 bg-white bg-opacity-10 rounded-full">
@@ -223,7 +219,8 @@
                                             min="1" 
                                             className="w-full bg-black bg-opacity-20 border border-white border-opacity-20 rounded-xl p-4 text-white font-bold text-lg focus:outline-none focus:ring-2 focus:ring-white/50"
                                             value={groupSize}
-                                            onChange={(e) => setGroupSize(parseInt(e.target.value) || 1)}
+                                            /* [수정됨] 빈 값 입력을 허용하여 삭제가 가능하도록 변경 */
+                                            onChange={(e) => setGroupSize(e.target.value)}
                                         />
                                         <span className="absolute right-4 top-1/2 transform -translate-y-1/2 text-white/80">명씩 묶기</span>
                                     </div>
@@ -249,19 +246,12 @@
                             </div>
                         </div>
 
-                        {/* Right Panel: Results */}
-                        {/* 모바일 정렬 수정:
-                            1. w-full 추가 (모바일에서 꽉 차게)
-                            2. translate-x 애니메이션 제거 (모바일에서 오른쪽으로 튀어나가던 문제 해결)
-                            3. translate-y를 사용하여 아래에서 위로 살짝 올라오는 효과로 변경
-                        */}
                         <div className={`w-full lg:flex-1 flex flex-col transition-all duration-500 
                             ${groups.length > 0 
                                 ? 'opacity-100 translate-y-0' 
                                 : 'opacity-50 translate-y-4 lg:translate-y-0 lg:opacity-100'
                             }`}>
                             
-                            {/* Result Header */}
                             <div className="bg-indigo-950 bg-opacity-40 backdrop-filter backdrop-blur-xl border border-white border-opacity-20 rounded-3xl p-6 shadow-2xl h-full overflow-hidden flex flex-col">
                                 <div className="flex justify-between items-center mb-6">
                                     <h2 className="text-xl font-bold text-white flex items-center gap-2 drop-shadow-md">
@@ -279,7 +269,6 @@
                                     )}
                                 </div>
 
-                                {/* Groups Grid */}
                                 <div className="flex-1 overflow-y-auto pr-2 custom-scrollbar">
                                     {groups.length === 0 ? (
                                         <div className="h-full flex flex-col items-center justify-center text-white/60 border-2 border-dashed border-white/10 rounded-2xl p-8 min-h-[200px]">
